KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -221,6 +221,11 @@
 
 ![13PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-13.png)
 
+ในทางปฏิบัติ สำนักพิกัดอัตราศุลกากร โดยฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2มีภารกิจหน้าที่และความรับผิดชอบในการพิจารณาคำขออนุมัติยกเว้นอากรตามประเภท 13 ที่ได้รับต้นเรื่องพร้อมคำขออนุมัติยกเว้นอากรจาก สำนักงาน หรือด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเฉพาะกรณี
+ที่มิใช่การนำเข้าโดยกระทรวงกลาโหม สำนักงานตำรวจแห่งชาติ กรมศุลกากร กรมสรรพสามิต กรมการปกครอง หรือคู่สัญญากับหน่วยงานข้างต้นเหล่านี้
+ของที่สำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้ามีปัญหาและไม่อาจพิจารณาได้
+เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2ส่วนมาตรฐานพิกัดอัตราศุลกากร 2ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณาไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเพื่อปฏิบัติพิธีการศุลกากรต่อไป 
+
 ## ตัวอย่างสินค้า ประเภทที่ 14 ภาค 4 
 
 **ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้**
@@ -278,7 +283,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTQ1NTg5ODk1LC0yNzI0MDY3MjAsLTIwOT
-QzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MTAyMTMx
-NTFdfQ==
+eyJoaXN0b3J5IjpbLTQyNTEzMTY2MiwtMjcyNDA2NzIwLC0yMD
+k0MzM0OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsODEwMjEz
+MTUxXX0=
 -->
