KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -222,10 +222,19 @@
 ![13PART4](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/img/4-13.png)
 
 ในทางปฏิบัติ สำนักพิกัดอัตราศุลกากร โดยฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2มีภารกิจหน้าที่และความรับผิดชอบในการพิจารณาคำขออนุมัติยกเว้นอากรตามประเภท 13 ที่ได้รับต้นเรื่องพร้อมคำขออนุมัติยกเว้นอากรจาก สำนักงาน หรือด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเฉพาะกรณี
-ที่มิใช่การนำเข้าโดยกระทรวงกลาโหม สำนักงานตำรวจแห่งชาติ กรมศุลกากร กรมสรรพสามิต กรมการปกครอง หรือคู่สัญญากับหน่วยงานข้างต้นเหล่านี้
-ของที่สำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้ามีปัญหาและไม่อาจพิจารณาได้
-เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2ส่วนมาตรฐานพิกัดอัตราศุลกากร 2ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณาไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเพื่อปฏิบัติพิธีการศุลกากรต่อไป 
+1. ที่มิใช่การนำเข้าโดยกระทรวงกลาโหม สำนักงานตำรวจแห่งชาติ กรมศุลกากร กรมสรรพสามิต กรมการปกครอง หรือคู่สัญญากับหน่วยงานข้างต้นเหล่านี้
+2. ของที่สำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้ามีปัญหาและไม่อาจพิจารณาได้
 
+เมื่อฝ่ายมาตรฐานพิกัดอัตราศุลกากรที่ 2.2 ส่วนมาตรฐานพิกัดอัตราศุลกากร 2ได้พิจารณาคำขออนุมัติยกเว้นอากรแล้วจะส่งผลการพิจารณาไปยังสำนักงาน หรือ ด่านศุลกากร ณ ท่าหรือที่ ที่นำเข้าเพื่อปฏิบัติพิธีการศุลกากรต่อไป 
+
+**กฎหมาย/ระเบียบที่เกี่ยวข้อง**
+
+1. [พระราชบัญญัติควบคุมยุทธภัณฑ์ พ.ศ. 2530](http://th.customs.go.th/data_files/1607071621221317251454.pdf)
+
+2. [ประกาศกรมศุลกากร ที่ 80/2551ระเบียบปฏิบัติเกี่ยวกับการยกเว้นอากรสำหรับของตามพระราชกำหนด](http://th.customs.go.th/data_files/1607071623141617979603.pdf)[พิกัดอัตราศุลกากร พ.ศ. 2530 ภาค 4 ประเภทที่ 13](http://th.customs.go.th/data_files/1607071623141617979603.pdf)
+
+>สอบถามข้อมูลเพิ่มเติมได้ที่ : ส่วนมาตรฐานพิกัดอัตราศุลกากร 2 (สพศ.2) กองพิกัดอัตราศุลกากร (กพก.) โทร.  0-2667-7000 ต่อ 20-5854 หรือ 5859
+[**[Reference]**](http://www.customs.go.th/list_strc_simple_step.php?ini_content=customs_tariff_exemption_03&ini_menu=menu_interest_and_law_160421_01&lang=th&root_left_menu=menu_customs_tariff_exemption&left_menu=menu_customs_tariff_exemption_03)
 
 ## ตัวอย่างสินค้า ประเภทที่ 14 ภาค 4 
 
@@ -284,7 +293,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk0OTYyNTg4OCwtNDI1MTMxNjYyLC0yNz
+eyJoaXN0b3J5IjpbMTkxMjM5MjA0NiwtNDI1MTMxNjYyLC0yNz
 I0MDY3MjAsLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQx
 MjYyMyw4MTAyMTMxNTFdfQ==
 -->
