KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -7,33 +7,33 @@
 
 การกำหนดราคาศุลกากรตามหลักการของแกตต์ กำหนดจาก 6 วิธี ดังนี้
 
-วิธีที่ 1
+### วิธีที่ 1
 
 ราคาซื้อขายของที่นำเข้า (Transaction value) หมายถึง ราคาซื้อขายที่ผู้ซื้อสินค้าได้ชำระจริงหรือที่จะต้องชำระให้กับผู้ขายในต่างประเทศสำหรับของที่นำเข้า ซึ่งได้มีการปรับราคาหรือได้นำมูลค่าหรือค่าใช้จ่ายอื่นๆ ไปรวมด้วย เช่น ค่าวัสดุเสริม ค่านายหน้า หรือค่าสิทธิ เป็นต้น
 
-วิธีที่ 2
+### วิธีที่ 2
 
 ราคาซื้อขายของที่เหมือนกัน (Transaction value of Identical Goods) หมายถึง ราคาซื้อขายของที่มีลักษณะเหมือนกันทุกด้านกับของที่นำเข้า ไม่ว่าจะเป็นทางกายภาพ คุณภาพ และชื่อเสียง และต้องผลิตขึ้นในประเทศเดียวกันกับของนำเข้าด้วย ทั้งนี้ โดยให้คำนึงถึงค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนของขึ้น และค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำของเข้าด้วย
 
-วิธีที่ 3
+### วิธีที่ 3
 
 ราคาซื้อขายของที่คล้ายกัน (Transaction value of Similar Goods) หมายถึง ราคาซื้อขายของที่ไม่เหมือนกันครบทุกด้านกับของที่นำเข้า แต่มีลักษณะหรือใช้วัสดุที่เป็นส่วนประกอบเหมือนกัน ผลิตในประเทศเดียวกัน และทำหน้าที่อย่างเดียวกันหรือทดแทนกันได้ในทางการค้า ทั้งนี้ โดยพิจารณาถึงคุณภาพ ชื่อเสียง และเครื่องหมายการค้าของของที่นำเข้ากับของนั้น
 
-วิธีที่ 4
+### วิธีที่ 4
 
 ราคาหักทอน (Deductive Value) หมายถึง ราคาที่กำหนดขึ้นโดยใช้ราคาซื้อขายต่อหน่วยของของที่นำเข้า หรือราคาซื้อขายต่อหน่วยของของที่เหมือนหรือของที่คล้ายกันที่ได้ขายไปในประเทศไทย โดยหักทอนค่าใช้จ่ายบางส่วนออกไป เช่น ค่านายหน้า หรือกำไรและค่าใช้จ่าย ค่าขนส่งและค่าประกันภัยที่เกิดขึ้นในราชอาณาจักร ค่าภาษีอากรในประเทศไทย มูลค่าเพิ่มของสินค้าที่เกิดขึ้นจากการประกอบหรือผ่านกรรมวิธีเพิ่มเติม
 
-วิธีที่ 5
+### วิธีที่ 5
 
 ราคาคำนวณ (Computed Value) หมายถึง ราคาที่กำหนดขึ้นจากต้นทุนการผลิตของสินค้าที่นำเข้า บวกกับกำไรและค่าใช้จ่ายทั่วไปที่รวมอยู่ตามปกติในการขายจากประเทศส่งออกมายังประเทศไทย รวมทั้งค่าภาชนะบรรจุ ค่าประกันภัย และค่าขนส่ง
 
-วิธีที่ 6
+### วิธีที่ 6
 
 ราคาย้อนกลับ (Fall Back Value) หมายถึง การกำหนดราคาโดยนำหลักเกณฑ์ วิธีการและเงื่อนไขในการกำหนดราคาตามวิธีที่ 1-5 มาใช้โดยผ่อนปรนเพื่อการกำหนดราคาอย่างสมเหตุสมผล
 
-การกำหนดราคาศุลกากรจะกำหนดตามวิธีที่ 1 วิธีที่ 2 และวิธีที่ 3 ตามลำดับ หากไม่อาจกำหนดราคาศุลกากรตามวิธีดังกล่าวได้ ให้กำหนดราคาศุลกากรตามวิธีที่ 4 หรือเมื่อยังไม่อาจกำหนดตามวิธีที่ 4 ได้อีก จะกำหนดราคาศุลกากรตามวิธีที่ 5 และวิธีที่ 6 ตามลำดับ อย่างไรก็ตาม ผู้นำเข้าสามารถขอให้กรมศุลกากรสลับลำดับการใช้วิธีที่ 5 และวิธีที่ 4 ได้หากหน่วยงานประเมินอากรเห็นชอบตามคำร้องของผู้นำเข้า
+>การกำหนดราคาศุลกากรจะกำหนดตามวิธีที่ 1 วิธีที่ 2 และวิธีที่ 3 ตามลำดับ หากไม่อาจกำหนดราคาศุลกากรตามวิธีดังกล่าวได้ ให้กำหนดราคาศุลกากรตามวิธีที่ 4 หรือเมื่อยังไม่อาจกำหนดตามวิธีที่ 4 ได้อีก จะกำหนดราคาศุลกากรตามวิธีที่ 5 และวิธีที่ 6 ตามลำดับ อย่างไรก็ตาม ผู้นำเข้าสามารถขอให้กรมศุลกากรสลับลำดับการใช้วิธีที่ 5 และวิธีที่ 4 ได้หากหน่วยงานประเมินอากรเห็นชอบตามคำร้องของผู้นำเข้า
 
-#### การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า (Transaction value)
+## การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า (Transaction value)
 
 การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้าจะต้องเป็นราคาที่ได้ชำระจริงหรือที่จะต้องชำระสำหรับของที่นำเข้าเมื่อได้มีการขายเพื่อส่งออกมายังราชอาณาจักร โดยต้องมีการปรับราคาตามหลักเกณฑ์ดังต่อไปนี้
 
@@ -199,5 +199,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTk4MTIyNTAyXX0=
+eyJoaXN0b3J5IjpbLTE1NTc5OTI2OTJdfQ==
 -->
