--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -56,7 +56,7 @@
     - ค่าอากรและภาษีเนื่องจากการนำเข้า
 3.  ค่าใช้จ่าย รายได้ หรือมูลค่าของวัสดุ อุปกรณ์หรือบริการ ที่จะรวมเข้าไว้ในราคาซื้อขายของที่นำเข้า และค่าใช้จ่ายที่จะนำมาหักออกจากราคาซื้อขายของที่นำเข้า จะต้องอยู่บนพื้นฐานของข้อมูลที่เป็นจริงและคำนวณเป็นมูลค่าได้เท่านั้น
 4.  ราคาซื้อขายของที่นำเข้าที่ใช้ในการกำหนดราคาศุลกากรต้องอยู่ภายใต้เงื่อนไข ดังต่อไปนี้
-    1.  ผู้ซื้อจะต้องไม่ถูกจำกัดในการจำหน่ายหรือการใช้ของนั้น เว้นแต่จะเป็นข้อจำกัดที่  
+  4.1  ผู้ซื้อจะต้องไม่ถูกจำกัดในการจำหน่ายหรือการใช้ของนั้น เว้นแต่จะเป็นข้อจำกัดที่  
         - กำหนด ขึ้นโดยบทบัญญัติของกฎหมายหรือโดยเจ้าหน้าที่ของรัฐ เช่น ห้ามขายของแก่ผู้เยาว์ ให้ตรวจสอบหรือทดสอบก่อนใช้ของ หรือให้มีสลากหีบห่อตามที่กำหนดไว้ เป็นต้น  
         - เป็นการห้ามของที่นำเข้านั้นไปขายต่อในสถานที่หรือพื้นที่บางแห่ง เช่น ผู้ขายกำหนดให้ผู้ซื้อขายของนั้นเฉพาะในเขตกรุงเทพมหานครและปริมณฑลเท่านั้น  
         - ไม่มีผลกระทบอย่างมากต่อราคาของของที่นำเข้า เช่น กรณีผู้ขายกำหนดห้ามผู้ซื้อแสดงหรือขายรถยนต์ก่อนวันเริ่มต้นรุ่นปีของรถยนต์นั้น
@@ -199,5 +199,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE1NTc5OTI2OTJdfQ==
+eyJoaXN0b3J5IjpbOTY2ODQ5MTMwXX0=
 -->
