--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -56,14 +56,14 @@
     - ค่าอากรและภาษีเนื่องจากการนำเข้า
 3.  ค่าใช้จ่าย รายได้ หรือมูลค่าของวัสดุ อุปกรณ์หรือบริการ ที่จะรวมเข้าไว้ในราคาซื้อขายของที่นำเข้า และค่าใช้จ่ายที่จะนำมาหักออกจากราคาซื้อขายของที่นำเข้า จะต้องอยู่บนพื้นฐานของข้อมูลที่เป็นจริงและคำนวณเป็นมูลค่าได้เท่านั้น
 4.  ราคาซื้อขายของที่นำเข้าที่ใช้ในการกำหนดราคาศุลกากรต้องอยู่ภายใต้เงื่อนไข ดังต่อไปนี้
-  4.1  ผู้ซื้อจะต้องไม่ถูกจำกัดในการจำหน่ายหรือการใช้ของนั้น เว้นแต่จะเป็นข้อจำกัดที่  
+	4.1.  ผู้ซื้อจะต้องไม่ถูกจำกัดในการจำหน่ายหรือการใช้ของนั้น เว้นแต่จะเป็นข้อจำกัดที่  
         - กำหนด ขึ้นโดยบทบัญญัติของกฎหมายหรือโดยเจ้าหน้าที่ของรัฐ เช่น ห้ามขายของแก่ผู้เยาว์ ให้ตรวจสอบหรือทดสอบก่อนใช้ของ หรือให้มีสลากหีบห่อตามที่กำหนดไว้ เป็นต้น  
         - เป็นการห้ามของที่นำเข้านั้นไปขายต่อในสถานที่หรือพื้นที่บางแห่ง เช่น ผู้ขายกำหนดให้ผู้ซื้อขายของนั้นเฉพาะในเขตกรุงเทพมหานครและปริมณฑลเท่านั้น  
         - ไม่มีผลกระทบอย่างมากต่อราคาของของที่นำเข้า เช่น กรณีผู้ขายกำหนดห้ามผู้ซื้อแสดงหรือขายรถยนต์ก่อนวันเริ่มต้นรุ่นปีของรถยนต์นั้น
     2.  การขายหรือราคาขายต้องไม่ขึ้นอยู่กับเงื่อนไขหรือสิ่งตอบแทนบางประการที่มิอาจกำหนดเป็นมูลค่าได้ เช่น ผู้ซื้อจะต้องซื้อของอย่างอื่นจากผู้ขายตามจำนวนที่ระบุไว้ด้วย ผู้ซื้อจะต้องขายของอย่างอื่นให้กับผู้ขายด้วย
     3.  ผู้ขายต้องไม่ได้รับรายได้จากการที่ผู้ซื้อนำของที่นำเข้าไปใช้หรือขายต่อในภายหลัง ไม่ว่าโดยทางตรงหรือทางอ้อม เว้นแต่จะเป็นกรณีที่อาจนำมารวมไว้ในราคาได้ตามข้อ 1
     4.  ผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย เว้นแต่ความสัมพันธ์ดังกล่าวจะไม่มีผลต่อราคาซื้อขายของที่นำเข้า
-5.  ความสัมพันธ์ระหว่างบุคคลในกรณีดังต่อไปนี้เป็นความสัมพันธ์ที่อาจมีผลต่อการกำหนดราคาศุลกากร  
+6.  ความสัมพันธ์ระหว่างบุคคลในกรณีดังต่อไปนี้เป็นความสัมพันธ์ที่อาจมีผลต่อการกำหนดราคาศุลกากร  
     (1) บุคคลหนึ่งเป็นกรรมการหรือพนักงานซึ่งเป็นผู้บริหารในกิจการของอีกบุคคลหนึ่ง  
     (2) บุคคลหนึ่งเป็นหุ้นส่วนเพื่อกระทำกิจการร่วมกับอีกบุคคลหนึ่ง  
     (3) บุคคลหนึ่งเป็นนายจ้างหรือลูกจ้างของอีกบุคคลหนึ่ง  
@@ -73,7 +73,7 @@
     (7) บุคคลทั้งสองร่วมกันควบคุมบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อมหรือ  
     (8) บุคคลหนึ่งเป็นสมาชิกในครอบครัวเดียวกันกับอีกบุคคลหนึ่ง  
     บุคคลที่มีอำนาจควบคุมตาม (4) (5) (6) และ (7) หมายถึงบุคคลที่มีอำนาจที่จะยับยั้งหรือสั่งการต่ออีกบุคคลหนึ่งในทางนิตินัยหรือพฤตินัย
-6.  ของนำเข้าดังตัวอย่างต่อไปนี้ ไม่ถือว่าเป็นการขาย และไม่สามารถกำหนดราคาศุลกากรโดยวิธีที่ 1  
+7.  ของนำเข้าดังตัวอย่างต่อไปนี้ ไม่ถือว่าเป็นการขาย และไม่สามารถกำหนดราคาศุลกากรโดยวิธีที่ 1  
     - ของขวัญ ของตัวอย่าง ของส่งเสริมการขายที่ให้มาโดยไม่คิดราคา  
     - ของฝากขาย  
     - ของที่นำเข้ามาโดยสำนักงานสาขาที่เป็นนิติบุคคลเดียวกัน  
@@ -199,5 +199,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTY2ODQ5MTMwXX0=
+eyJoaXN0b3J5IjpbOTQ5NTAxODE2XX0=
 -->
