--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -35,7 +35,7 @@
 
 ## การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า (Transaction value)
 
-การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้าจะต้องเป็นราคาที่ได้ชำระจริงหรือที่จะต้องชำระสำหรับของที่นำเข้าเมื่อได้มีการขายเพื่อส่งออกมายังราชอาณาจักร โดยต้องมีการปรับราคาตามหลักเกณฑ์ดังต่อไปนี้
+### การกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้าจะต้องเป็นราคาที่ได้ชำระจริงหรือที่จะต้องชำระสำหรับของที่นำเข้าเมื่อได้มีการขายเพื่อส่งออกมายังราชอาณาจักร โดยต้องมีการปรับราคาตามหลักเกณฑ์ดังต่อไปนี้
 
 1.  ค่าใช้จ่ายหรือรายได้ที่ต้องนำมารวมไว้ในราคาซื้อขายของที่นำเข้า  
     - ค่าสิทธิและค่าธรรมเนียมใบอนุญาตที่เกี่ยวข้องกับของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมอันเป็นเงื่อนไขในการขายของนั้น  
@@ -66,14 +66,14 @@
 5.  ความสัมพันธ์ระหว่างบุคคลในกรณีดังต่อไปนี้เป็นความสัมพันธ์ที่อาจมีผลต่อการกำหนดราคาศุลกากร  
 	    (1) บุคคลหนึ่งเป็นกรรมการหรือพนักงานซึ่งเป็นผู้บริหารในกิจการของอีกบุคคลหนึ่ง  
 	    (2) บุคคลหนึ่งเป็นหุ้นส่วนเพื่อกระทำกิจการร่วมกับอีกบุคคลหนึ่ง  
-    (3) บุคคลหนึ่งเป็นนายจ้างหรือลูกจ้างของอีกบุคคลหนึ่ง  
-    (4) บุคคลหนึ่งเป็นเจ้าของ ผู้ควบคุม หรือถือหุ้นที่มีสิทธิออกเสียงในกิจการของอีกบุคคลหนึ่งตั้งแต่ ร้อยละห้าของหุ้นทั้งหมดที่มีสิทธิออกเสียง ไม่ว่าโดยทางตรงหรือทางอ้อม  
-    (5) บุคคลหนึ่งควบคุมอีกบุคคลหนึ่งไม่ว่าโดยทางตรงหรือทางอ้อม  
-    (6) บุคคลทั้งสองถูกควบคุมโดยบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อม  
-    (7) บุคคลทั้งสองร่วมกันควบคุมบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อมหรือ  
-    (8) บุคคลหนึ่งเป็นสมาชิกในครอบครัวเดียวกันกับอีกบุคคลหนึ่ง  
+	    (3) บุคคลหนึ่งเป็นนายจ้างหรือลูกจ้างของอีกบุคคลหนึ่ง  
+	    (4) บุคคลหนึ่งเป็นเจ้าของ ผู้ควบคุม หรือถือหุ้นที่มีสิทธิออกเสียงในกิจการของอีกบุคคลหนึ่งตั้งแต่ ร้อยละห้าของหุ้นทั้งหมดที่มีสิทธิออกเสียง ไม่ว่าโดยทางตรงหรือทางอ้อม  
+	    (5) บุคคลหนึ่งควบคุมอีกบุคคลหนึ่งไม่ว่าโดยทางตรงหรือทางอ้อม  
+	    (6) บุคคลทั้งสองถูกควบคุมโดยบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อม  
+	    (7) บุคคลทั้งสองร่วมกันควบคุมบุคคลที่สามไม่ว่าโดยทางตรงหรือทางอ้อมหรือ  
+	    (8) บุคคลหนึ่งเป็นสมาชิกในครอบครัวเดียวกันกับอีกบุคคลหนึ่ง  
     บุคคลที่มีอำนาจควบคุมตาม (4) (5) (6) และ (7) หมายถึงบุคคลที่มีอำนาจที่จะยับยั้งหรือสั่งการต่ออีกบุคคลหนึ่งในทางนิตินัยหรือพฤตินัย
-7.  ของนำเข้าดังตัวอย่างต่อไปนี้ ไม่ถือว่าเป็นการขาย และไม่สามารถกำหนดราคาศุลกากรโดยวิธีที่ 1  
+6.  ของนำเข้าดังตัวอย่างต่อไปนี้ ไม่ถือว่าเป็นการขาย และไม่สามารถกำหนดราคาศุลกากรโดยวิธีที่ 1  
     - ของขวัญ ของตัวอย่าง ของส่งเสริมการขายที่ให้มาโดยไม่คิดราคา  
     - ของฝากขาย  
     - ของที่นำเข้ามาโดยสำนักงานสาขาที่เป็นนิติบุคคลเดียวกัน  
@@ -81,13 +81,13 @@
     - ของนำเข้าเพื่อทำลาย โดยผู้นำของเข้าได้รับค่าบริการ  
     - ของที่นำเข้ามาโดยคนกลางซึ่งไม่ใช่ผู้ซื้อ
 
-#### การกำหนดราคาศุลกากรตามวิธีที่ 2 ราคาซื้อขายของที่เหมือนกัน (Transaction value of Identical Goods)
+### การกำหนดราคาศุลกากรตามวิธีที่ 2 ราคาซื้อขายของที่เหมือนกัน (Transaction value of Identical Goods)
 
 1.  กรมศุลกากรจะกำหนดราคาศุลกากรตามวิธีที่ 2 คือราคาซื้อขายของที่เหมือนกัน หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 ได้ ทั้งนี้ ราคาซื้อขายของที่เหมือนกันที่ใช้ในการกำหนดราคาศุลกากรจะเป็นราคาซื้อขายของที่มีลักษณะเหมือนกันทุกด้านกับของที่นำเข้า ไม่ว่าจะเป็นทางกายภาพ คุณภาพ และชื่อเสียง และต้องผลิตขึ้นในประเทศเดียวกันกับของที่นำเข้าด้วย โดยให้คำนึงถึงค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนของขึ้น และค่าจัดการต่าง ๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำเข้าด้วย
 2.  ราคาซื้อขายของที่เหมือนกันที่ใช้ในการกำหนดราคาศุลกากรจะต้องเป็นไปตามหลักเกณฑ์ วิธีการ และเงื่อนไข ดังต่อไปนี้
-    1.  เป็นราคาซื้อขายของที่เหมือนกันที่ได้ขายเพื่อส่งออกมายังราชอาณาจักรและได้ส่งออกในเวลาเดียวกันหรือใกล้เคียงกันกับของที่นำเข้า  
+   1. 1.  เป็นราคาซื้อขายของที่เหมือนกันที่ได้ขายเพื่อส่งออกมายังราชอาณาจักรและได้ส่งออกในเวลาเดียวกันหรือใกล้เคียงกันกับของที่นำเข้า  
         คำว่า "ส่งออกในเวลา เดียวกันหรือในเวลาใกล้เคียงกัน" หมายถึง การส่งออกภายในระยะเวลา 30 วัน ก่อนหรือหลังการส่งออกของของที่นำเข้า และในการตรวจสอบวันส่งออก ให้ใช้วันที่ที่ออกใบตราส่งสินค้าเป็นเกณฑ์
-    2.  เป็นราคาซื้อขายของที่นำเข้าที่เคยรับเป็นราคาศุลกากรมาแล้ว
+  1. 2.  เป็นราคาซื้อขายของที่นำเข้าที่เคยรับเป็นราคาศุลกากรมาแล้ว
     3.  เป็นราคาซื้อขายในระดับการค้าและปริมาณเดียวกันกับของที่นำเข้า  
         - การขายในระดับการค้าเดียวกัน หมายถึง การค้าส่ง การค้าปลีก ฯลฯ หากของที่นำเข้าเป็นการขายส่ง ของที่เหมือนกันจะต้องเป็นการขายส่งเช่นเดียวกัน หากของที่นำเข้าเป็นการขายปลีก ของที่เหมือนกันก็จะต้องเป็นการขายปลีกเช่นเดียวกัน  
         - การขายในระดับปริมาณเดียวกัน หมายถึง การขายในปริมาณที่ใกล้เคียงกันตามปกติวิสัยของการซื้อขายสินค้าในกลุ่มหรือชนิดเดียวกัน
@@ -199,5 +199,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU5NTY0NDI0MSw5NDk1MDE4MTZdfQ==
+eyJoaXN0b3J5IjpbMTAxOTc5NzI2LDk0OTUwMTgxNl19
 -->
