KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -85,7 +85,7 @@
 
 1.  กรมศุลกากรจะกำหนดราคาศุลกากรตามวิธีที่ 2 คือราคาซื้อขายของที่เหมือนกัน หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 ได้ ทั้งนี้ ราคาซื้อขายของที่เหมือนกันที่ใช้ในการกำหนดราคาศุลกากรจะเป็นราคาซื้อขายของที่มีลักษณะเหมือนกันทุกด้านกับของที่นำเข้า ไม่ว่าจะเป็นทางกายภาพ คุณภาพ และชื่อเสียง และต้องผลิตขึ้นในประเทศเดียวกันกับของที่นำเข้าด้วย โดยให้คำนึงถึงค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนของขึ้น และค่าจัดการต่าง ๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำเข้าด้วย
 2.  ราคาซื้อขายของที่เหมือนกันที่ใช้ในการกำหนดราคาศุลกากรจะต้องเป็นไปตามหลักเกณฑ์ วิธีการ และเงื่อนไข ดังต่อไปนี้
-   2.1.  เป็นราคาซื้อขายของที่เหมือนกันที่ได้ขายเพื่อส่งออกมายังราชอาณาจักรและได้ส่งออกในเวลาเดียวกันหรือใกล้เคียงกันกับของที่นำเข้า         คำว่า "ส่งออกในเวลา เดียวกันหรือในเวลาใกล้เคียงกัน" หมายถึง การส่งออกภายในระยะเวลา 30 วัน ก่อนหรือหลังการส่งออกของของที่นำเข้า และในการตรวจสอบวันส่งออก ให้ใช้วันที่ที่ออกใบตราส่งสินค้าเป็นเกณฑ์
+   2.1.  เป็นราคาซื้อขายของที่เหมือนกันที่ได้ขายเพื่อส่งออกมายังราชอาณาจักรและได้ส่งออกในเวลาเดียวกันหรือใกล้เคียงกันกับของที่นำเข้า คำว่า **"ส่งออกในเวลา เดียวกันหรือในเวลาใกล้เคียงกัน"** หมายถึง การส่งออกภายในระยะเวลา 30 วัน ก่อนหรือหลังการส่งออกของของที่นำเข้า และในการตรวจสอบวันส่งออก ให้ใช้วันที่ที่ออกใบตราส่งสินค้าเป็นเกณฑ์
   2.2.  เป็นราคาซื้อขายของที่นำเข้าที่เคยรับเป็นราคาศุลกากรมาแล้ว
     2.3.  เป็นราคาซื้อขายในระดับการค้าและปริมาณเดียวกันกับของที่นำเข้า  
 	        - การขายในระดับการค้าเดียวกัน หมายถึง การค้าส่ง การค้าปลีก ฯลฯ หากของที่นำเข้าเป็นการขายส่ง ของที่เหมือนกันจะต้องเป็นการขายส่งเช่นเดียวกัน หากของที่นำเข้าเป็นการขายปลีก ของที่เหมือนกันก็จะต้องเป็นการขายปลีกเช่นเดียวกัน  
@@ -104,14 +104,14 @@
 
 1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 และวิธีที่ 2 ให้กำหนดราคาศุลกากรโดยวิธีที่ 3 คือ ราคาซื้อขายของที่คล้ายกันซึ่งราคาซื้อขายของที่คล้ายกันที่ใช้ในการกำหนดราคาศุลกากรจะต้องเป็นราคาซื้อขายของที่ไม่เหมือนกันครบทุกด้านกับของที่นำเข้า แต่มีลักษณะหรือใช้วัสดุที่เป็นส่วนประกอบเหมือนกัน ผลิตในประเทศเดียวกัน และทำหน้าที่อย่างเดียวกันหรือทดแทนกันได้ในทางการค้า ทั้งนี้ โดยพิจารณาถึงคุณภาพ ชื่อเสียง และเครื่องหมายการค้าของของที่นำเข้ากับของนั้นด้วย
 2.  ราคาซื้อขายของที่คล้ายกันที่ใช้ในการกำหนดราคาศุลกากรจะต้องเป็นไปตามหลักเกณฑ์ วิธีการ และเงื่อนไข ดังต่อไปนี้
-    1.  เป็นราคาซื้อขายของที่คล้ายกันที่ได้ขายเพื่อส่งออกมายังราชอาณาจักรและได้ส่งออกในเวลาเดียวกันหรือใกล้เคียงกันกับของที่นำเข้า  
+    2.1.  เป็นราคาซื้อขายของที่คล้ายกันที่ได้ขายเพื่อส่งออกมายังราชอาณาจักรและได้ส่งออกในเวลาเดียวกันหรือใกล้เคียงกันกับของที่นำเข้า  
         คำว่า "ส่งออกในเวลา เดียวกันหรือในเวลาใกล้เคียงกัน" หมายถึง การส่งออกภายในระยะเวลา 30 วัน ก่อนหรือหลังการส่งออกของของที่นำเข้า และในการตรวจสอบวันส่งออก ให้ใช้วันที่ที่ออกใบตราส่งสินค้าเป็นเกณฑ์
-    2.  เป็นราคาซื้อขายของที่นำเข้าที่เคยรับเป็นราคาศุลกากรมาแล้ว
-    3.  เป็นราคาซื้อขายในระดับการค้าและปริมาณเดียวกันกับของที่นำเข้า  
+    2.2.  เป็นราคาซื้อขายของที่นำเข้าที่เคยรับเป็นราคาศุลกากรมาแล้ว
+    2.3.  เป็นราคาซื้อขายในระดับการค้าและปริมาณเดียวกันกับของที่นำเข้า  
         - การขายในระดับการค้าเดียวกัน หมายถึง การค้าส่ง การค้าปลีก ฯลฯ หากของที่นำเข้าเป็นการขายส่ง ของที่คล้ายกันจะต้องเป็นการขายส่งเช่นเดียวกัน หากของที่นำเข้าเป็นการขายปลีก ของที่คล้ายกันก็จะต้องเป็นการขายปลีกเช่นเดียวกัน  
         - การขายในระดับปริมาณเดียวกัน หมายถึง การขายในปริมาณที่ใกล้เคียงกันตามปกติวิสัยของการซื้อขายสินค้าในกลุ่มหรือชนิดเดียวกัน
-    4.  ไม่เป็นราคาซื้อขายของที่รวมหรือประกอบด้วยมูลค่าการให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ งานออกแบบ แบบแปลน และภาพร่าง ที่ได้กระทำขึ้นในราชอาณาจักร
-    5.  ในกรณีที่ไม่มีราคาซื้อขายของที่คล้ายกันตาม 2.3 ให้นำราคาซื้อขายของที่คล้ายกันที่ได้ขายในระดับการค้า เดียวกับของที่นำเข้าแต่ปริมาณต่างกัน หรือปริมาณเดียวกับของที่นำเข้าแต่ระดับการค้าต่างกัน หรือระดับการค้าและปริมาณแตกต่างกับของที่นำเข้า ซึ่งได้เคยรับเป็นราคาศุลกากรมาแล้ว มาปรับราคา โดยคำนึงถึงความแตกต่างในเรื่องระดับการค้าหรือปริมาณ ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนขนขึ้น และค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำของเข้า ทั้งนี้ โดยพิจารณาจากหลักฐานที่ผู้นำของเข้านำมาแสดง เช่น  
+    2.4.  ไม่เป็นราคาซื้อขายของที่รวมหรือประกอบด้วยมูลค่าการให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ งานออกแบบ แบบแปลน และภาพร่าง ที่ได้กระทำขึ้นในราชอาณาจักร
+    2.5.  ในกรณีที่ไม่มีราคาซื้อขายของที่คล้ายกันตาม 2.3 ให้นำราคาซื้อขายของที่คล้ายกันที่ได้ขายในระดับการค้า เดียวกับของที่นำเข้าแต่ปริมาณต่างกัน หรือปริมาณเดียวกับของที่นำเข้าแต่ระดับการค้าต่างกัน หรือระดับการค้าและปริมาณแตกต่างกับของที่นำเข้า ซึ่งได้เคยรับเป็นราคาศุลกากรมาแล้ว มาปรับราคา โดยคำนึงถึงความแตกต่างในเรื่องระดับการค้าหรือปริมาณ ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนขนขึ้น และค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของมายังด่านศุลกากรที่นำของเข้า ทั้งนี้ โดยพิจารณาจากหลักฐานที่ผู้นำของเข้านำมาแสดง เช่น  
         - การขายในระดับการค้าเดียวกันแต่ในปริมาณต่างกัน ให้ปรับราคาเฉพาะด้านปริมาณ  
         - การขายในระดับการค้าต่างกันแต่ในปริมาณเดียวกัน ให้ปรับราคาเฉพาะด้านระดับการค้า  
         - การขายในระดับการค้าต่างกันและในปริมาณที่ต่างกัน ให้ปรับราคาทั้งด้านระดับการค้าและปริมาณ  
@@ -198,5 +198,5 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTExMDEyNTgxOTUsOTQ5NTAxODE2XX0=
+eyJoaXN0b3J5IjpbNTI3NDUyNTkzLDk0OTUwMTgxNl19
 -->
