--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -124,36 +124,36 @@
 
 1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า วิธีที่ 2 ราคาซื้อขายของที่เหมือนกัน และวิธีที่ 3 ราคาซื้อขายของที่คล้ายกัน กรมศุลกากรจะกำหนดราคาศุลกากรโดยวิธีที่ 4 ราคาหักทอน เว้นแต่ผู้นำเข้าร้องขอต่อพนักงานศุลกากรให้กำหนดราคาศุลกากรโดยใช้ราคาคำนวณก่อนราคาหักทอนและพนักงานศุลกากรเห็นชอบกับคำร้องดังกล่าวแล้ว
 2.  ราคาหักทอนที่ใช้ในการกำหนดราคาศุลกากรสำหรับของที่นำเข้าจะต้องเป็นราคาซื้อขายต่อหน่วยของของที่นำเข้าที่ได้ขายไปในราชอาณาจักรในภาพเดียวกับที่นำเข้า โดยหักค่าใช้จ่าย ดังต่อไปนี้ออก
-    1.  ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนที่ได้จ่ายหรือตกลงว่าจะจ่าย หรือกำไรและค่าใช้จ่ายทั่วไปตามปกติที่เกี่ยวเนื่องกับการขายของนั้นในราชอาณาจักร อย่างใดอย่างหนึ่ง โดยเทียบเคียงกับของประเภทหรือชนิดเดียวกัน
-    2.  ค่าประกัน ภัยค่าขนส่ง และค่าใช้จ่ายต่างๆ ที่เกี่ยวข้องกับการขนส่งของนั้นที่เกิดขึ้นในราชอาณาจักร
-    3.  ค่าอากรและภาษีอื่นๆ ที่ต้องชำระในราชอาณาจักร เนื่องจากการนำเข้าหรือการขายของนั้น
+    2.1.  ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนที่ได้จ่ายหรือตกลงว่าจะจ่าย หรือกำไรและค่าใช้จ่ายทั่วไปตามปกติที่เกี่ยวเนื่องกับการขายของนั้นในราชอาณาจักร อย่างใดอย่างหนึ่ง โดยเทียบเคียงกับของประเภทหรือชนิดเดียวกัน
+    2.2.  ค่าประกัน ภัยค่าขนส่ง และค่าใช้จ่ายต่างๆ ที่เกี่ยวข้องกับการขนส่งของนั้นที่เกิดขึ้นในราชอาณาจักร
+    2.3.  ค่าอากรและภาษีอื่นๆ ที่ต้องชำระในราชอาณาจักร เนื่องจากการนำเข้าหรือการขายของนั้น
 3.  ในกรณีที่ไม่มีราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อ 2 ให้ใช้ราคาซื้อขายต่อหน่วยของของที่เหมือนกันหรือของที่คล้ายกัน ตามลำดับ ที่ได้ขายไปในราชอาณาจักรในสภาพเดียวกับที่นำเข้าโดยหักค่าใช้จ่ายตามข้อ 2.1 - 2.3 ออกจากราคาซื้อขายต่อหน่วยของของที่เหมือนกันหรือของที่คล้ายกัน แล้วแต่กรณี
 4.  ราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อ 2 หรือของที่เหมือนกันหรือของที่คล้ายกันตามข้อ 3 จะต้องเป็นราคาที่ได้ขายไปในปริมาณรวมที่มากที่สุดในเวลาเดียวกันหรือใกล้เคียงกันกับการนำเข้าของที่นำเข้า ในกรณีที่ไม่มีราคาที่ได้ขายในเวลาดังกล่าว ให้ใช้ราคาที่ได้ขายไปในปริมาณรวมที่มากที่สุดในวันแรกที่ได้มีการขายของที่นำเข้า ของที่เหมือนกัน หรือของที่คล้ายกันดังกล่าว ซึ่งต้องไม่เกิน 90 วันหลังจากการนำเข้าของนั้น
 5.  การใช้ราคาหักทอนตามข้อ 2 - 4 ผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย และไม่เป็นผู้จัดหาวัสดุ อุปกรณ์หรือบริการซึ่งนำไปใช้ในการผลิตให้แก่ผู้ขายเพื่อส่งออกมายังราชอาณาจักร
 6.  ในกรณีที่ไม่มีการขายของที่นำเข้า ของที่เหมือนกัน หรือของที่คล้ายกันตามข้อ 2 - 4 หากผู้นำของเข้าร้องขอหรือพนักงานศุลกากรเห็นสมควร ให้ใช้ราคาซื้อขายต่อหน่วยของของที่นำเข้าที่ได้นำไปผ่านกรรมวิธีเพิ่มเติม โดยให้หักทอนมูลค่าที่เพิ่มขึ้นจากการนำไปผ่านกรรมวิธีเพิ่มเติมดังกล่าวและค่าใช้จ่ายต่างๆ ตามข้อ 2.1 - 2.3 ออกจากราคาซื้อขายของของนั้น ทั้งนี้ราคาซื้อขายต่อหน่วยของของที่นำเข้าตามข้อนี้จะต้องเป็นราคาที่ได้จากการขายของนั้นไปในปริมาณรวมมากที่สุด โดยผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย
 
-#### การกำหนดราคาศุลกากรตามวิธีที่ 5 ราคาคำนวณ (Computed Value)
+### การกำหนดราคาศุลกากรตามวิธีที่ 5 ราคาคำนวณ (Computed Value)
 
 1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 ราคาซื้อขายของที่นำเข้า วิธีที่ 2 ราคาซื้อขายของที่เหมือนกัน วิธีที่ 3 ราคาซื้อขายของที่คล้ายกัน และวิธีที่ 4 ราคาหักทอน ให้กำหนดราคาศุลกากรโดยวิธีที่ 5 ราคาคำนวณ เว้นแต่ผู้นำเข้าร้องขอต่อพนักงานศุลกากรให้กำหนดราคาศุลกากรโดยใช้ราคาคำนวณก่อนราคาหักทอนและพนักงานศุลกากรเห็นชอบกับคำร้องดังกล่าวแล้ว
 2.  ราคาคำนวณที่ใช้ในการกำหนดราคาศุลกากรจะต้องประกอบด้วยผลรวมของรายการ ดังต่อไปนี้
-    1.  ต้นทุนหรือมูลค่าของวัสดุและการจัดทำหรือกรรมวิธีใดๆ ที่ใช้ในการผลิตของที่นำเข้า ซึ่งหมายความรวมถึง ต้นทุนวัตถุดิบ วัตถุดิบกึ่งสำเร็จรูป ส่วนประกอบ หรือชิ้นส่วน รวมทั้งต้นทุนในการจัดหาวัตถุดิบจากแหล่งผู้ผลิตมายังโรงงานอุตสาหกรรม แต่ไม่รวมถึงเศษหรือของเสียที่สามารถนำกลับมาใช้ใหม่ได้อีก (RECOVERABLE SCRAP OR WASTE) และไม่รวมค่าภาษีอากรภายในประเทศผู้ผลิตสำหรับวัตถุดิบที่มีการคืนค่าภาษี อากรเพื่อการส่งออก ทั้งนี้ ต้นทุนในการจัดทำให้รวมถึง ต้นทุนทางตรง ได้แก่ ค่าแรงงาน ต้นทุนในการประกอบ เครื่องจักรในการผลิต และต้นทุนทางอ้อม ได้แก่ ที่ปรึกษาโรงงาน การบำรุงรักษา ค่าล่วงเวลา ฯลฯ
-    2.  กำไรและค่าใช้จ่ายทั่วไปที่เกิดขึ้นจากการขายของประเภทหรือชนิดเดียวกันกับของที่นำเข้า โดยผู้ผลิตรายอื่นๆ เพื่อส่งออกมายังราชอาณาจักร
-    3.  ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้า
-    4.  ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า
-    5.  มูลค่าของวัสดุและอุปกรณ์เพื่อใช้ในการผลิตและการขายเพื่อส่งออกของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมที่ผู้ซื้อเป็นผู้จัดหา
-    6.  ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนของขึ้น และค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า
-    7.  มูลค่าของการให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ การออกแบบ แบบแปลนและภาพร่างที่กระทำขึ้นในราชอาณาจักรและเป็นสิ่งจำเป็นสำหรับการผลิตของที่นำเข้าโดยคิดมูลค่าของการให้บริการดังกล่าวจากผู้ผลิต (ถ้ามี)
+    2.1.  ต้นทุนหรือมูลค่าของวัสดุและการจัดทำหรือกรรมวิธีใดๆ ที่ใช้ในการผลิตของที่นำเข้า ซึ่งหมายความรวมถึง ต้นทุนวัตถุดิบ วัตถุดิบกึ่งสำเร็จรูป ส่วนประกอบ หรือชิ้นส่วน รวมทั้งต้นทุนในการจัดหาวัตถุดิบจากแหล่งผู้ผลิตมายังโรงงานอุตสาหกรรม แต่ไม่รวมถึงเศษหรือของเสียที่สามารถนำกลับมาใช้ใหม่ได้อีก (RECOVERABLE SCRAP OR WASTE) และไม่รวมค่าภาษีอากรภายในประเทศผู้ผลิตสำหรับวัตถุดิบที่มีการคืนค่าภาษี อากรเพื่อการส่งออก ทั้งนี้ ต้นทุนในการจัดทำให้รวมถึง ต้นทุนทางตรง ได้แก่ ค่าแรงงาน ต้นทุนในการประกอบ เครื่องจักรในการผลิต และต้นทุนทางอ้อม ได้แก่ ที่ปรึกษาโรงงาน การบำรุงรักษา ค่าล่วงเวลา ฯลฯ
+    2.2.  กำไรและค่าใช้จ่ายทั่วไปที่เกิดขึ้นจากการขายของประเภทหรือชนิดเดียวกันกับของที่นำเข้า โดยผู้ผลิตรายอื่นๆ เพื่อส่งออกมายังราชอาณาจักร
+   2.3.  ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้า
+    2.4.  ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า
+    2.5.  มูลค่าของวัสดุและอุปกรณ์เพื่อใช้ในการผลิตและการขายเพื่อส่งออกของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมที่ผู้ซื้อเป็นผู้จัดหา
+    2.6.  ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า ค่าขนของลง ค่าขนของขึ้น และค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังด่านศุลกากรที่นำของเข้า
+    2.7.  มูลค่าของการให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ การออกแบบ แบบแปลนและภาพร่างที่กระทำขึ้นในราชอาณาจักรและเป็นสิ่งจำเป็นสำหรับการผลิตของที่นำเข้าโดยคิดมูลค่าของการให้บริการดังกล่าวจากผู้ผลิต (ถ้ามี)
 3.  การกำหนดราคาศุลกากรตามวิธีราคาคำนวณนี้ให้กระทำบนพื้นฐานของข้อมูล เอกสารหลักฐาน หรือบัญชีที่ได้รับจากผู้ผลิตจากต่างประเทศ หรือผู้นำของเข้าในนามของผู้ผลิตดังกล่าว
 4.  ในกรณีที่ผู้นำของเข้าหรือผู้ผลิตต่างประเทศไม่สามารถจัดส่งข้อมูล เอกสารหลักฐาน หรือบัญชีดังกล่าวได้ภายในเวลาอันสมควร ให้ถือว่าไม่อาจกำหนดราคาศุลกากรตามหมวดนี้ได้
 
-#### การกำหนดราคาศุลกากรตามวิธีที่ 6 ราคาย้อนกลับ (Fall Back Value)
+### การกำหนดราคาศุลกากรตามวิธีที่ 6 ราคาย้อนกลับ (Fall Back Value)
 
 1.  หากไม่อาจกำหนดราคาศุลกากรตามวิธีที่ 1 วิธีที่ 2 วิธีที่ 3 วิธีที่ 4 และวิธีที่ 5 ได้ให้กำหนดราคาศุลกากรโดยวิธีที่ 6 ราคาย้อนกลับ โดยมีหลักเกณฑ์ในการกำหนดราคา ดังนี้
 2.  กำหนดราคาศุลกากรตามวิธีที่ 6 ราคาย้อนกลับ มีหลักเกณฑ์ในการปฏิบัติ ดังนี้
-    1.  กรมศุลกากรจะพิจารณาราคาจากราคาศุลกากรที่เคยรับไว้แล้วก่อนหน้านี้
-    2.  กำหนดราคาของนำเข้าโดยใช้วิธีที่ 1 ถึงวิธีที่ 5 อย่างผ่อนปรนและสมเหตุสมผล
-    3.  กรณีที่ไม่สามารถกำหนดราคาศุลกากรตามข้อ 2.2 อาจกำหนดโดยวิธีอื่นที่สมเหตุสมผล โดยที่วิธีการดังกล่าวจะต้องไม่เป็นข้อห้ามของวิธีย้อนกลับและจะต้องสอดคล้องกับหลักการที่บัญญัติไว้ในความตกลงว่าด้วยการนำมาตรา 7 ของความตกลงทั่วไปว่าด้วยภาษีศุลกากรและการค้า 1994 มาถือปฏิบัติ และมาตรา 7 ของความตกลงทั่วไปว่าด้วยภาษีศุลกากรและการค้า 1994
-    4.  การกำหนดราคาศุลกากรโดยวิธีย้อนกลับยังสามารถผ่อนปรนหลักเกณฑ์ได้อีก ดังเช่น  
+    2.1.  กรมศุลกากรจะพิจารณาราคาจากราคาศุลกากรที่เคยรับไว้แล้วก่อนหน้านี้
+    2.2.  กำหนดราคาของนำเข้าโดยใช้วิธีที่ 1 ถึงวิธีที่ 5 อย่างผ่อนปรนและสมเหตุสมผล
+    2.3.  กรณีที่ไม่สามารถกำหนดราคาศุลกากรตามข้อ 2.2 อาจกำหนดโดยวิธีอื่นที่สมเหตุสมผล โดยที่วิธีการดังกล่าวจะต้องไม่เป็นข้อห้ามของวิธีย้อนกลับและจะต้องสอดคล้องกับหลักการที่บัญญัติไว้ในความตกลงว่าด้วยการนำมาตรา 7 ของความตกลงทั่วไปว่าด้วยภาษีศุลกากรและการค้า 1994 มาถือปฏิบัติ และมาตรา 7 ของความตกลงทั่วไปว่าด้วยภาษีศุลกากรและการค้า 1994
+    2.4.  การกำหนดราคาศุลกากรโดยวิธีย้อนกลับยังสามารถผ่อนปรนหลักเกณฑ์ได้อีก ดังเช่น  
         - ขยายเวลาตามที่กำหนดในแต่ละวิธีออกไปครั้งละ 30 วัน แต่รวมแล้วไม่เกิน 1 ปี  
         - ของที่เหมือนกัน ของที่คล้ายกัน ที่ผลิตจากประเทศอื่น  
         - ราคาขายปลีกนำมาใช้เป็นฐานในวิธีหักทอน โดยการหักค่าใช้จ่ายอย่างเหมาะสม  
@@ -172,7 +172,7 @@
     - ราคาที่กำหนดขึ้นเองหรือที่ไม่เป็นจริง  
     
 
-### ข้อควรทราบในการสำแดงราคาศุลกากร
+## ข้อควรทราบในการสำแดงราคาศุลกากร
 
 ผู้นำเข้าควรตรวจสอบว่า ราคาสินค้านำเข้าที่ท่านสำแดงต่อศุลกากรเป็นไปที่กำหนดไว้ในระบบราคาแกตต์หรือไม่ โดยตอบคำถามแนวทางการประเมินราคาแกตต์สำหรับผู้นำเข้า (การตรวจสอบว่าราคาสินค้าว่าเป็นไปตามราคาแกตต์หรือไม่) ดังต่อไปนี้
 
@@ -193,10 +193,10 @@
 8. หากท่านสำแดงราคาที่ซื้อขายจริง (Transaction Value) ซึ่งท่านไม่ใช่ผู้ซื้อ ท่านได้แสดงหลักฐานว่าการซื้อขายนั้นเป็นการซื้อขายโดยสุจริตและสินค้านั้นมีปลายทางการขายอยู่ที่ประเทศไทยหรือไม่  
 9. ท่านมีแผนการหรือวิธีการที่น่าเชื่อถือในการแสดงเอกสารการนำเข้าและข้อมูลสนับสนุนอื่น ๆ ที่ศุลกากรต้องการหรือไม่
 
-สอบถามข้อมูลเพิ่มเติม  
+_สอบถามข้อมูลเพิ่มเติม  
 กรณีผู้นำเข้ามีปัญหาหรือข้อสงสัยเกี่ยวกับการกำหนดราคาศุลกากรตามระบบราคาแกตต์ สามารถติดต่อสอบถามข้อมูลเพิ่มเติมได้จากสำนักงานศุลกากรหรือด่านศุลกากรที่นำเข้าทุกแห่ง
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTI3NDUyNTkzLDk0OTUwMTgxNl19
+eyJoaXN0b3J5IjpbLTE3MzgzNzAyMDUsOTQ5NTAxODE2XX0=
 -->
