KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -193,10 +193,10 @@
 8. หากท่านสำแดงราคาที่ซื้อขายจริง (Transaction Value) ซึ่งท่านไม่ใช่ผู้ซื้อ ท่านได้แสดงหลักฐานว่าการซื้อขายนั้นเป็นการซื้อขายโดยสุจริตและสินค้านั้นมีปลายทางการขายอยู่ที่ประเทศไทยหรือไม่  
 9. ท่านมีแผนการหรือวิธีการที่น่าเชื่อถือในการแสดงเอกสารการนำเข้าและข้อมูลสนับสนุนอื่น ๆ ที่ศุลกากรต้องการหรือไม่
 
-_สอบถามข้อมูลเพิ่มเติม  
+**_สอบถามข้อมูลเพิ่มเติม_** 
 กรณีผู้นำเข้ามีปัญหาหรือข้อสงสัยเกี่ยวกับการกำหนดราคาศุลกากรตามระบบราคาแกตต์ สามารถติดต่อสอบถามข้อมูลเพิ่มเติมได้จากสำนักงานศุลกากรหรือด่านศุลกากรที่นำเข้าทุกแห่ง
-
+- กองมาตรฐานพิธีการและราคาศุลกากร (กมพ.)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE3MzgzNzAyMDUsOTQ5NTAxODE2XX0=
+eyJoaXN0b3J5IjpbMTY3MjA3MDc1MSw5NDk1MDE4MTZdfQ==
 -->
