KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -195,8 +195,10 @@
 
 **_สอบถามข้อมูลเพิ่มเติม_** 
 กรณีผู้นำเข้ามีปัญหาหรือข้อสงสัยเกี่ยวกับการกำหนดราคาศุลกากรตามระบบราคาแกตต์ สามารถติดต่อสอบถามข้อมูลเพิ่มเติมได้จากสำนักงานศุลกากรหรือด่านศุลกากรที่นำเข้าทุกแห่ง
-- กองมาตรฐานพิธีการและราคาศุลกากร (กมพ.)
+หรือกองมาตรฐานพิธีการและราคาศุลกากร (กมพ.) โทร.: 0-2667-7000 ต่อ 20-4630, 20-4631
+
+ที่มา : [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY3MjA3MDc1MSw5NDk1MDE4MTZdfQ==
+eyJoaXN0b3J5IjpbLTcyODU4NDQ3LDk0OTUwMTgxNl19
 -->
