KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -42,9 +42,9 @@
     - รายได้ซึ่งผู้ขายได้รับจากการที่ผู้ซื้อนำของที่นำเข้าไปใช้ หรือขายต่อไม่ว่าโดยทางตรงหรือทางอ้อม  
     - ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า ค่าขนของลง ค่าขนของขึ้นและค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า  
     - ค่าใช้จ่ายหรือมูลค่าที่ผู้ซื้อเป็นผู้รับภาระตามรายการ ดังต่อไปนี้  
-    -- ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
-    -- ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
-    -- ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า  
+		    - ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
+		    - ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
+		 - ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า  
     - มูลค่าของวัสดุ อุปกรณ์หรือบริการเพื่อใช้ในการผลิตและการขายเพื่อส่งออกของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมที่ผู้ซื้อเป็นผู้จัดหา ดังต่อไปนี้  
     -- วัสดุ ส่วนประกอบ ชิ้นส่วนหรือสิ่งอื่นที่คล้ายคลึงกัน ที่รวมอยู่ในของที่นำเข้า  
     -- เครื่องมือ แม่พิมพ์ แบบพิมพ์ หรือสิ่งอื่นที่คล้ายคลึงกัน ที่ใช้ในการผลิตของที่นำเข้า  
@@ -56,15 +56,15 @@
     - ค่าอากรและภาษีเนื่องจากการนำเข้า
 3.  ค่าใช้จ่าย รายได้ หรือมูลค่าของวัสดุ อุปกรณ์หรือบริการ ที่จะรวมเข้าไว้ในราคาซื้อขายของที่นำเข้า และค่าใช้จ่ายที่จะนำมาหักออกจากราคาซื้อขายของที่นำเข้า จะต้องอยู่บนพื้นฐานของข้อมูลที่เป็นจริงและคำนวณเป็นมูลค่าได้เท่านั้น
 4.  ราคาซื้อขายของที่นำเข้าที่ใช้ในการกำหนดราคาศุลกากรต้องอยู่ภายใต้เงื่อนไข ดังต่อไปนี้
-		1. ผู้ซื้อจะต้องไม่ถูกจำกัดในการจำหน่ายหรือการใช้ของนั้น เว้นแต่จะเป็นข้อจำกัดที่  
-	        - กำหนด ขึ้นโดยบทบัญญัติของกฎหมายหรือโดยเจ้าหน้าที่ของรัฐ เช่น ห้ามขายของแก่ผู้เยาว์ ให้ตรวจสอบหรือทดสอบก่อนใช้ของ หรือให้มีสลากหีบห่อตามที่กำหนดไว้ เป็นต้น  
-	        - เป็นการห้ามของที่นำเข้านั้นไปขายต่อในสถานที่หรือพื้นที่บางแห่ง เช่น ผู้ขายกำหนดให้ผู้ซื้อขายของนั้นเฉพาะในเขตกรุงเทพมหานครและปริมณฑลเท่านั้น  
-	        - ไม่มีผลกระทบอย่างมากต่อราคาของของที่นำเข้า เช่น กรณีผู้ขายกำหนดห้ามผู้ซื้อแสดงหรือขายรถยนต์ก่อนวันเริ่มต้นรุ่นปีของรถยนต์นั้น
-	    2.  การขายหรือราคาขายต้องไม่ขึ้นอยู่กับเงื่อนไขหรือสิ่งตอบแทนบางประการที่มิอาจกำหนดเป็นมูลค่าได้ เช่น ผู้ซื้อจะต้องซื้อของอย่างอื่นจากผู้ขายตามจำนวนที่ระบุไว้ด้วย ผู้ซื้อจะต้องขายของอย่างอื่นให้กับผู้ขายด้วย
-	    3.  ผู้ขายต้องไม่ได้รับรายได้จากการที่ผู้ซื้อนำของที่นำเข้าไปใช้หรือขายต่อในภายหลัง ไม่ว่าโดยทางตรงหรือทางอ้อม เว้นแต่จะเป็นกรณีที่อาจนำมารวมไว้ในราคาได้ตามข้อ 1
-	    4. ผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย เว้นแต่ความสัมพันธ์ดังกล่าวจะไม่มีผลต่อราคาซื้อขายของที่นำเข้า
+			1. ผู้ซื้อจะต้องไม่ถูกจำกัดในการจำหน่ายหรือการใช้ของนั้น เว้นแต่จะเป็นข้อจำกัดที่  
+		        - กำหนด ขึ้นโดยบทบัญญัติของกฎหมายหรือโดยเจ้าหน้าที่ของรัฐ เช่น ห้ามขายของแก่ผู้เยาว์ ให้ตรวจสอบหรือทดสอบก่อนใช้ของ หรือให้มีสลากหีบห่อตามที่กำหนดไว้ เป็นต้น  
+		        - เป็นการห้ามของที่นำเข้านั้นไปขายต่อในสถานที่หรือพื้นที่บางแห่ง เช่น ผู้ขายกำหนดให้ผู้ซื้อขายของนั้นเฉพาะในเขตกรุงเทพมหานครและปริมณฑลเท่านั้น  
+		        - ไม่มีผลกระทบอย่างมากต่อราคาของของที่นำเข้า เช่น กรณีผู้ขายกำหนดห้ามผู้ซื้อแสดงหรือขายรถยนต์ก่อนวันเริ่มต้นรุ่นปีของรถยนต์นั้น
+			2.  การขายหรือราคาขายต้องไม่ขึ้นอยู่กับเงื่อนไขหรือสิ่งตอบแทนบางประการที่มิอาจกำหนดเป็นมูลค่าได้ เช่น ผู้ซื้อจะต้องซื้อของอย่างอื่นจากผู้ขายตามจำนวนที่ระบุไว้ด้วย ผู้ซื้อจะต้องขายของอย่างอื่นให้กับผู้ขายด้วย
+			3.  ผู้ขายต้องไม่ได้รับรายได้จากการที่ผู้ซื้อนำของที่นำเข้าไปใช้หรือขายต่อในภายหลัง ไม่ว่าโดยทางตรงหรือทางอ้อม เว้นแต่จะเป็นกรณีที่อาจนำมารวมไว้ในราคาได้ตามข้อ 1
+			4. ผู้ซื้อต้องไม่มีความสัมพันธ์กับผู้ขาย เว้นแต่ความสัมพันธ์ดังกล่าวจะไม่มีผลต่อราคาซื้อขายของที่นำเข้า
 5.  ความสัมพันธ์ระหว่างบุคคลในกรณีดังต่อไปนี้เป็นความสัมพันธ์ที่อาจมีผลต่อการกำหนดราคาศุลกากร  
-	    (1) บุคคลหนึ่งเป็นกรรมการหรือพนักงานซึ่งเป็นผู้บริหารในกิจการของอีกบุคคลหนึ่ง  
+		(1) บุคคลหนึ่งเป็นกรรมการหรือพนักงานซึ่งเป็นผู้บริหารในกิจการของอีกบุคคลหนึ่ง  
 	    (2) บุคคลหนึ่งเป็นหุ้นส่วนเพื่อกระทำกิจการร่วมกับอีกบุคคลหนึ่ง  
 	    (3) บุคคลหนึ่งเป็นนายจ้างหรือลูกจ้างของอีกบุคคลหนึ่ง  
 	    (4) บุคคลหนึ่งเป็นเจ้าของ ผู้ควบคุม หรือถือหุ้นที่มีสิทธิออกเสียงในกิจการของอีกบุคคลหนึ่งตั้งแต่ ร้อยละห้าของหุ้นทั้งหมดที่มีสิทธิออกเสียง ไม่ว่าโดยทางตรงหรือทางอ้อม  
@@ -200,6 +200,6 @@
 ที่มา : [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzIwODEzOTc1LC03Mjg1ODQ0Nyw5NDk1MD
+eyJoaXN0b3J5IjpbMTM4MDI5NDU0LC03Mjg1ODQ0Nyw5NDk1MD
 E4MTZdfQ==
 -->
