KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -42,14 +42,14 @@
     - รายได้ซึ่งผู้ขายได้รับจากการที่ผู้ซื้อนำของที่นำเข้าไปใช้ หรือขายต่อไม่ว่าโดยทางตรงหรือทางอ้อม  
     - ค่าประกันภัย ค่าขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า ค่าขนของลง ค่าขนของขึ้นและค่าจัดการต่างๆ ที่เกี่ยวเนื่องกับการขนส่งของที่นำเข้ามายังท่าหรือที่ที่นำของเข้า  
     - ค่าใช้จ่ายหรือมูลค่าที่ผู้ซื้อเป็นผู้รับภาระตามรายการ ดังต่อไปนี้  
-		    - ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
-		    - ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
-		 - ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า  
+		- ค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนและนายหน้า แต่ไม่รวมค่าธรรมเนียมหรือค่าบำเหน็จตัวแทนเนื่องจากการซื้อ  
+		- ค่าภาชนะบรรจุที่ถือเป็นส่วนหนึ่งของของที่นำเข้าตามความมุ่งหมายในการจัดเก็บอากร  
+		- ค่าวัสดุและค่าแรงงานในการบรรจุหีบห่อของที่นำเข้า  
     - มูลค่าของวัสดุ อุปกรณ์หรือบริการเพื่อใช้ในการผลิตและการขายเพื่อส่งออกของที่นำเข้า ไม่ว่าโดยทางตรงหรือทางอ้อมที่ผู้ซื้อเป็นผู้จัดหา ดังต่อไปนี้  
-    -- วัสดุ ส่วนประกอบ ชิ้นส่วนหรือสิ่งอื่นที่คล้ายคลึงกัน ที่รวมอยู่ในของที่นำเข้า  
-    -- เครื่องมือ แม่พิมพ์ แบบพิมพ์ หรือสิ่งอื่นที่คล้ายคลึงกัน ที่ใช้ในการผลิตของที่นำเข้า  
-    -- วัสดุที่ใช้สิ้นเปลืองไปในการผลิตของที่นำเข้า  
-    -- การให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ การออกแบบ แบบแปลน และภาพร่างที่กระทำขึ้นนอกราชอาณาจักรและเป็นสิ่งจำเป็นสำหรับการผลิตของที่นำเข้า
+	    - วัสดุ ส่วนประกอบ ชิ้นส่วนหรือสิ่งอื่นที่คล้ายคลึงกัน ที่รวมอยู่ในของที่นำเข้า  
+	    - เครื่องมือ แม่พิมพ์ แบบพิมพ์ หรือสิ่งอื่นที่คล้ายคลึงกัน ที่ใช้ในการผลิตของที่นำเข้า  
+	    - วัสดุที่ใช้สิ้นเปลืองไปในการผลิตของที่นำเข้า  
+	    - การให้บริการด้านวิศวกรรม พัฒนาการ งานศิลป์ การออกแบบ แบบแปลน และภาพร่างที่กระทำขึ้นนอกราชอาณาจักรและเป็นสิ่งจำเป็นสำหรับการผลิตของที่นำเข้า
 2.  ค่าใช้จ่ายที่ต้องนำมาหักออกจากราคาซื้อขายของที่นำเข้าในการกำหนดราคาศุลกากรตามวิธีที่ 1  
     - ค่าใช้จ่ายในการก่อสร้าง ติดตั้ง ประกอบ บำรุงรักษา หรือการให้ความช่วยเหลือด้านวิชาการที่กระทำขึ้นภายหลังจากการนำเข้าของนั้น  
     - ค่าขนส่งภายหลังจากการนำเข้าสำเร็จแล้ว  
@@ -200,6 +200,6 @@
 ที่มา : [กรมศุลกากร](http://www.customs.go.th/content.php?ini_content=customs_valuation_01&ini_menu=menu_customs_value&xleft_menu=menu_customs_value_01&lang=th&left_menu=menu_customs_value)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTM4MDI5NDU0LC03Mjg1ODQ0Nyw5NDk1MD
-E4MTZdfQ==
+eyJoaXN0b3J5IjpbLTE0NDk0MDAxNzAsLTcyODU4NDQ3LDk0OT
+UwMTgxNl19
 -->
