--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -14,7 +14,7 @@
 - อัตราอากร ใช้ Tariff Code และ Tariff Sequence
 - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
 	 VAT ยกเว้น (บันทึก Exemption Rate = 100%)
-- มูลค่าการนำเข้า CIF = **ค่าของ**
+- มูลค่าการนำเข้า CIF = **==ค่าของ==**
 - บันทึกเลขที่ใบขนสินค้าขาออกและรายการที่ของใบขนสินค้าขาออกที่อ้างถึง
 
 
@@ -293,7 +293,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTkxMjM5MjA0NiwtNDI1MTMxNjYyLC0yNz
-I0MDY3MjAsLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQx
-MjYyMyw4MTAyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbMjYxNjAyNDc4LDE5MTIzOTIwNDYsLTQyNT
+EzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0OTk0LC0xNDMxNzAw
+NTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX0=
 -->
