--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -16,7 +16,7 @@
 	- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
 	- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
 	- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
-	- การวางประกันให้**ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล**
+	- **การวางประกันให้****ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล**
  
 ### สิทธิคลังสินค้าทัณฑ์บน
  - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
@@ -94,8 +94,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUzMjA1NTQyNiwxMTk3Nzk1NjY0LC0xMj
-Q0MDg0NDM2LDEyOTI3MDU4MTAsMTk5ODk2MTQ0NSwxODQ3MjEw
-OTUsLTEyNDMwMDY5OSwxMjQ3NTQwNzU1LC0xMzQxNzEwNDQ3XX
-0=
+eyJoaXN0b3J5IjpbMTg0NjI1MjAzNCwxNTMyMDU1NDI2LDExOT
+c3OTU2NjQsLTEyNDQwODQ0MzYsMTI5MjcwNTgxMCwxOTk4OTYx
+NDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLT
+EzNDE3MTA0NDddfQ==
 -->
