--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -5,7 +5,7 @@
 1. ระบุ 19bis = Y ที่ส่วนรายการในใบขนสินค้า
 2. ระบุ Import Tax Incentives ID = เลขที่ทะเบียนผู้ใช้สิทธิตามมาตรา 29 ที่ส่วนรายการในใบขนสินค้า
  3. ระบุ Privilege Code 
-	- กรณีชำระอากร ให้ระบุตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA  
+	- **กรณีชำระอากร** **ให้ระบุตามสิทธิที่มีขณะนำเข้า** เช่น มาตรา 12, WTO, TAU, AFTA  
 เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
 	- กรณีวางประกันตามมาตรา 30  ให้ระบุ Privilege Code = 000 ตามอัตราปกติเท่านั้น
 4. การชำระอากรตรวจสอบกับหลักการ ตามมาตรา 29 เช่น
@@ -16,7 +16,7 @@
 	- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
 	- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
 	- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
-	- **การวางประกันให้****ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล**
+	- **การวางประกันให้** **==ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล==**
  
 ### สิทธิคลังสินค้าทัณฑ์บน
  - ระบุ Bond = Y ที่ส่วนรายการในใบขนสินค้า
@@ -94,7 +94,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg0NjI1MjAzNCwxNTMyMDU1NDI2LDExOT
+eyJoaXN0b3J5IjpbLTk5NjU1MjQyNiwxNTMyMDU1NDI2LDExOT
 c3OTU2NjQsLTEyNDQwODQ0MzYsMTI5MjcwNTgxMCwxOTk4OTYx
 NDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLT
 EzNDE3MTA0NDddfQ==
