--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -12,10 +12,10 @@
 	- **ชำระอากรเต็มจำนวน** 
 	- **ลดเหลือกึ่งหนึ่ง**จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ จดทะเบียนตลาดหลักทรัพย์, บริษัทมหาชนจำกัด, สมาชิกสภาอุตสาหกรรม, สมาชิกหอการค้า, อื่น ๆ) ให้บันทึก Exemption Rate = 50 
 	-  **ลดเหลือร้อยละ 5** จากอากรที่เรียกเก็บเป็นการทั่วไป ตามมาตรา 12 พระราชกำหนดพิกัดอัตราศุลกากร (สำหรับ Gold Card) ให้บันทึก Exemption Rate = 95 
-5. วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดย _**ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09)**_  ที่ส่วนรายการในใบขนสินค้า (Deposit)  _**ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
+5. วางประกันตามมาตรา 30 สำหรับของนำเข้าตามมาตรา 29  ให้บันทึกการวางประกัน โดย _**ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D09)**_  ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการในใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
 	- อากรศุลกากร ให้ยกยอดจากอากรศุลกากรที่ตรวจสอบกับหลักการ มาวางประกัน
-	- ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน 
-	- VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้
+	- ==ภาษีสรรพสามิตและค่าภาษีอากรอื่น ๆ ต้องวางประกันเต็มจำนวน== 
+	- ==VAT ต้องชำระเต็ม ไม่สามารถวางประกันได้==
 	- **การวางประกันให้** **==ปัดเศษของสตางค์ (ทศนิยมหลักที่ 3) ตามหลักสากล==**
  
 ### สิทธิคลังสินค้าทัณฑ์บน
@@ -94,7 +94,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTcxOTIyODM0MywxNTMyMDU1NDI2LDExOT
+eyJoaXN0b3J5IjpbMTgxNzA1MTk1NiwxNTMyMDU1NDI2LDExOT
 c3OTU2NjQsLTEyNDQwODQ0MzYsMTI5MjcwNTgxMCwxOTk4OTYx
 NDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLT
 EzNDE3MTA0NDddfQ==
