KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -26,7 +26,7 @@
  - ระบุ Privilege Code ตามสิทธิที่มีขณะนำเข้า เช่น มาตรา 12, WTO, TAU, AFTA เป็นต้น และต้องคำนวณค่าภาษีอากรตามปกติ
  - ใช้สิทธิยกเว้นอากรให้ใส่ Exemption Rate = 100
  - ระบุรหัสสถานที่นำเข้า (Discharge Port) เป็นรหัสสถานที่ของศุลกากร ณ ด่านศุลกากร ที่นำของเข้า (First Port)
- - ระบุรหัสสถานที่ตรวจปล่อย (Release Port) ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า (First Port)  
+ - **ระบุรหัสสถานที่ตรวจปล่อย ==(Release Port)== ให้บันทึกข้อมูลรหัสสถานที่ตรวจปล่อย (Release Port) เป็น ด่านศุลกากร ที่นำของเข้า ==(First Port)==**  
  
 ### สิทธิเขตปลอดอากร (Free Zone)
 
@@ -94,8 +94,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTgxNzA1MTk1NiwxNTMyMDU1NDI2LDExOT
-c3OTU2NjQsLTEyNDQwODQ0MzYsMTI5MjcwNTgxMCwxOTk4OTYx
-NDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LDEyNDc1NDA3NTUsLT
-EzNDE3MTA0NDddfQ==
+eyJoaXN0b3J5IjpbLTEzMTUwOTU1NjQsMTUzMjA1NTQyNiwxMT
+k3Nzk1NjY0LC0xMjQ0MDg0NDM2LDEyOTI3MDU4MTAsMTk5ODk2
+MTQ0NSwxODQ3MjEwOTUsLTEyNDMwMDY5OSwxMjQ3NTQwNzU1LC
+0xMzQxNzEwNDQ3XX0=
 -->
