--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -58,16 +58,13 @@
  - Privilege Code = 000 ตามอัตราปกติ หรือ 999 ตามพระราชกำหนด เท่านั้น
  - ระบุเลขที่อนุมัติสั่งปล่อยของ BOI ส่วนใบอนุญาต 
  - การชำระอากร ให้ระบุ Exemption Rate = ตามที่ BOI อนุมัติให้ เช่น
-		- ยกเว้นอากร ให้บันทึก Exemption Rate = 100 
-		- ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = 50 
-		- ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = 95 
-		- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code (D10) ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
+		- ยกเว้นอากร ให้บันทึก Exemption Rate = **100**
+		- ลดเหลือกึ่งหนึ่ง ให้บันทึก Exemption Rate = **50** 
+		- ลดเหลือร้อยละ 5 ให้บันทึก Exemption Rate = **95**
+		- การวางประกัน ให้ระบุรหัสเหตุผลการวางประกันมาในช่อง Deposit Reason Code ==(D10)== ที่ส่วนรายการในใบขนสินค้า (Deposit)  ระบุจำนวนเงินวางประกันมาในช่อง Deposit Amount ที่ส่วนรายการใน  ใบขนสินค้า (Duty) และที่ส่วนรายการในใบขนสินค้า (Deposit)
 				- อากรศุลกากร ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
 				 - VAT ให้ระบุยอดวางประกัน ตามที่ BOI อนุมัติให้ 
-
-
-
-> **ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น**
+				 -  **==ภาษีสรรพสามิตและภาษีเพื่อมหาดไทย ต้องชำระเต็ม เท่านั้น==**
 
  
 ### สิทธิคืนอากรขาเข้า ตามมาตรา 28  (Re-Export)
@@ -94,8 +91,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzMTUwOTU1NjQsMTUzMjA1NTQyNiwxMT
-k3Nzk1NjY0LC0xMjQ0MDg0NDM2LDEyOTI3MDU4MTAsMTk5ODk2
-MTQ0NSwxODQ3MjEwOTUsLTEyNDMwMDY5OSwxMjQ3NTQwNzU1LC
-0xMzQxNzEwNDQ3XX0=
+eyJoaXN0b3J5IjpbLTkzMDkwODk1MywtMTMxNTA5NTU2NCwxNT
+MyMDU1NDI2LDExOTc3OTU2NjQsLTEyNDQwODQ0MzYsMTI5Mjcw
+NTgxMCwxOTk4OTYxNDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LD
+EyNDc1NDA3NTUsLTEzNDE3MTA0NDddfQ==
 -->
