--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/สิทธิประโยชน์ทางภาษีอากร.md
@@ -86,12 +86,12 @@
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
 4. ให้จัดทำใบขนสินค้าขาเข้าก่อนและนำเลขที่ใบขนสินค้าขาเข้าพร้อมรายการไปบันทึกไว้ใน
 ใบขนสินค้าขาออก
-5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร **อยู่นอกอารักขาของศุลกากรแล้ว** ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
-6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า **เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น**
+5. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักร  **_อยู่นอกอารักขาของศุลกากรแล้ว_** ให้ทำใบขนสินค้าขาเข้าปกติ และจัดทำใบขนสินค้าขาออกโดยระบุในแต่ละรายการที่ส่งออกเป็น Re-Export  และให้ระบุเลขที่ใบขนสินค้าขาเข้าพร้อมรายการ   แล้วไปดำเนินการขอคืนอากรในระบบคืนอากรทั่วไปเมื่อส่งออกเรียบร้อยแล้ว
+6. กรณีของที่จะส่งกลับออกไปนอกราชอาณาจักรเพียงบางส่วน อนุญาตให้ทำ Re-Export ในอารักขาโดยให้ชำระค่าภาษีอากรหนึ่งใน 10 หรือไม่เกิน 1,000 บาท ต่อใบขนสินค้าขาเข้า **==เฉพาะกรณีที่สามารถแยก D/O ได้เท่านั้น==**
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkzMDkwODk1MywtMTMxNTA5NTU2NCwxNT
+eyJoaXN0b3J5IjpbLTE5MzI4NDA3OSwtMTMxNTA5NTU2NCwxNT
 MyMDU1NDI2LDExOTc3OTU2NjQsLTEyNDQwODQ0MzYsMTI5Mjcw
 NTgxMCwxOTk4OTYxNDQ1LDE4NDcyMTA5NSwtMTI0MzAwNjk5LD
 EyNDc1NDA3NTUsLTEzNDE3MTA0NDddfQ==
