KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -5,7 +5,7 @@
   
 ## รายการสุทธินำกลับ ประเภทที่ 1 ภาค 4   
   
-ของที่ส่งออกรวมทั้งของที่ส่งกลับออกไป ซึ่งนำกลับเข้ามา**ภายในหนึ่งปี โดยไม่เปลี่ยนแปลงลักษณะหรือรูปแต่ประการใด** และในเวลาที่ส่งออกนั้นได้รับใบสุทธิสำหรับนำกลับเข้ามาแล้ว ได้รับยกเว้นอากร  ให้ผู้ขอยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้  
+ของที่ส่งออกรวมทั้งของที่ส่งกลับออกไป ซึ่งนำกลับเข้ามา**==ภายในหนึ่งปี==** _โดยไม่เปลี่ยนแปลงลักษณะหรือรูปแต่ประการใด_ และในเวลาที่ส่งออกนั้นได้รับใบสุทธิสำหรับนำกลับเข้ามาแล้ว ได้รับยกเว้นอากร  ให้ผู้ขอยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้  
 
 - ระบุ Re - Importation Certificate = Y ที่ส่วนรายการในใบขนสินค้า  	
 - การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า  
@@ -293,7 +293,8 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjYxNjAyNDc4LDE5MTIzOTIwNDYsLTQyNT
-EzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0OTk0LC0xNDMxNzAw
-NTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX0=
+eyJoaXN0b3J5IjpbLTE0OTMxNjIyNjAsMjYxNjAyNDc4LDE5MT
+IzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0
+OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX
+0=
 -->
