KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -66,7 +66,7 @@
 
 ## สิทธิของใช้ส่วนตัว (ของส่วนตัว) ประเภทที่ 5 ภาค 4 
 
-ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **==เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
+ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **==เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง==**
 
 **สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น** ซึ่งเป็นของส่วนตัวที่ผู้เดินทางนำเข้ามาพร้อมกับตนนั้น ยกเว้นอากรให้ได้ แต่ต้องไม่เกินปริมาณ ดังนี้
 
@@ -120,7 +120,7 @@
 - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
 - VAT ยกเว้น (บันทึก Exemption Rate = 100%)
 
-กรณีจัดทำ __คำร้องขอรับของไปก่อน__ แทนการจัดทำใบขนสินค้าขาเข้า
+กรณีจัดทำ **คำร้องขอรับของไปก่อน** แทนการจัดทำใบขนสินค้าขาเข้า
 
 1. กรณีมีความจำเป็นต้องนำออกไปจากอารักขาของศุลกากรโดยรีบด่วน
 2. ยังไม่สามารถดำเนินการเรื่องยกเว้นอากรได้แล้วเสร็จ 
@@ -293,8 +293,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTAwODIxMTE0MCwyNjE2MDI0NzgsMTkxMj
-M5MjA0NiwtNDI1MTMxNjYyLC0yNzI0MDY3MjAsLTIwOTQzMzQ5
-OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MTAyMTMxNTFdfQ
-==
+eyJoaXN0b3J5IjpbNzIxMDU1NzgwLDI2MTYwMjQ3OCwxOTEyMz
+kyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMjA5NDMzNDk5
+NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
 -->
