KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -128,7 +128,7 @@
 
 **ให้ผู้นำเข้าจัดทำและส่งข้อมูลคำร้องขอรับของไปก่อน โดยระบุค่าดังนี้**
 
--	Document Type = 3 (คำร้องขอรับของไปก่อน)
+-	**Document Type = 3 (คำร้องขอรับของไปก่อน)**
 -	การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
 -	ระบุ Import Tariff = **10PART4** (ของที่ได้รับเอกสิทธิ์)
 -	ระบุ Privilege Code = ตามสิทธิ ณ ขณะนำเข้า 
@@ -293,7 +293,7 @@
 
 > Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzIxMDU1NzgwLDI2MTYwMjQ3OCwxOTEyMz
+eyJoaXN0b3J5IjpbNTk0Mzk1MTcyLDI2MTYwMjQ3OCwxOTEyMz
 kyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMjA5NDMzNDk5
 NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
 -->
